修改配置文件

--- a/cfg/配置.ini
+++ b/cfg/配置.ini
@@ -1,15 +1,11 @@
 ﻿[url]
-单体 = http://123.56.237.15
-;http://123.56.242.250/
+单体 = http://123.56.242.250/
 连锁 = 
 
 
 [登录_单体]
-;用户名 = wangkun
-;密码 = 123456
-用户名 = test11
-密码 = 199401024
-
+用户名 = wangkun
+密码 = 123456
 
 [登录_连锁]
 用户名 = wangkun
